--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Maria Grazia Toppi | Cybersecurity Student</title>
 
-<link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" href="/Maryevans96/style.css"> 
 <script src="https://kit.fontawesome.com/a2e0e6e6a2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 <div class="container">
 
-<img src="WhatsApp Image 2025-10-31 at 22.33.15-fotor-2025110145435.png" alt="Maria Grazia Toppi" class="profile-image">
-
-
+<img src="/Maryevans96/WhatsApp Image 2025-10-31 at 22.33.15-fotor-2025110145435.png" alt="Maria Grazia Toppi" class="profile-image">
 <h1>Maria Grazia Toppi</h1>
 <p class="sottotitolo">Studentessa di Cybersecurity ed Eterna Curiosa</p>
 <p class="emoticons">🎨💻🖋️📚🎭🎻🎹✨</p>
