--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <img src="/Maryevans96/WhatsApp Image 2025-10-31 at 22.33.15-fotor-2025110145435.png" alt="Maria Grazia Toppi" class="profile-image">
 <h1>Maria Grazia Toppi</h1>
 <p class="sottotitolo">Studentessa di Cybersecurity ed Eterna Curiosa</p>
-<p class="emoticons">🎨💻🖋️📚🎭🎻🎹✨</p>
+<p class="emoticons">💻🖋️📚🎨🎭🎻🎹✨</p>
 <section id="introduzione">
 <h2>Chi Sono</h2>
 <p>
