--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
 <section id="competenze">
     <h2>🎯 Competenze Tecniche e Personali</h2>
 
- <section class="competenze-linguistiche">
+<section class="competenze-linguistiche">
     <h3>🗣️ Competenze Linguistiche</h3>
     <ul>
-        <li>🇮🇹 <strong>Italiano:</strong> Madrelingua</li>
-        <li>🇬🇧 <strong>Inglese:</strong> Livello Avanzato</li>
-        <li>🇫🇷 <strong>Francese:</strong> Livello Intermedio</li>
-        <li>🇩🇪 <strong>Tedesco:</strong> Livello Base</li>
-        <li>🇷🇺 <strong>Russo:</strong> Livello Base</li>
+        <li>&#x1F1EE;&#x1F1F9; <strong>Italiano:</strong> Madrelingua</li>
+        <li>&#x1F1EC;&#x1F1E7; <strong>Inglese:</strong> Livello Avanzato</li>
+        <li>&#x1F1EB;&#x1F1F7; <strong>Francese:</strong> Livello Intermedio</li>
+        <li>&#x1F1E9;&#x1F1EA; <strong>Tedesco:</strong> Livello Base</li>
+        <li>&#x1F1F7;&#x1F1FA; <strong>Russo:</strong> Livello Base</li>
     </ul>
 </section>
 
