--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
   <h2>Resta in Contatto</h2>
 
   <div class="social-buttons">
-    <a href="https://www.linkedin.com/in/maria-grazia-toppi-843187397/?trk=opento_sprofile_topcard"
+    <a href="https://www.linkedin.com/in/mariagraziatoppi96/"
     target="_blank" rel="noopener noreferrer" class="social-btn linkedin">
       <i class="fab fa-linkedin-in"></i> LinkedIn
     </a>
