--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
 <section class="competenze-linguistiche">
     <h3>🗣️ Competenze Linguistiche</h3>
     <ul>
-        <li>&#x1F1EE;&#x1F1F9; <strong>Italiano:</strong> Madrelingua</li>
-        <li>&#x1F1EC;&#x1F1E7; <strong>Inglese:</strong> Livello Avanzato</li>
-        <li>&#x1F1EB;&#x1F1F7; <strong>Francese:</strong> Livello Intermedio</li>
-        <li>&#x1F1E9;&#x1F1EA; <strong>Tedesco:</strong> Livello Base</li>
-        <li>&#x1F1F7;&#x1F1FA; <strong>Russo:</strong> Livello Base</li>
+        <li><i class="fas fa-globe"></i> <strong>Italiano (IT):</strong> Madrelingua</li>
+        <li><i class="fas fa-globe"></i> <strong>Inglese (EN):</strong> Livello Avanzato</li>
+        <li><i class="fas fa-globe"></i> <strong>Francese (FR):</strong> Livello Intermedio</li>
+        <li><i class="fas fa-globe"></i> <strong>Tedesco (DE):</strong> Livello Base</li>
+        <li><i class="fas fa-globe"></i> <strong>Russo (RU):</strong> Livello Base</li>
     </ul>
 </section>
 
