--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
 <section class="competenze-linguistiche">
     <h3>🗣️ Competenze Linguistiche</h3>
     <ul>
-        <li><i class="fas fa-globe"></i> <strong>Italiano (IT):</strong> Madrelingua</li>
-        <li><i class="fas fa-globe"></i> <strong>Inglese (EN):</strong> Livello Avanzato</li>
-        <li><i class="fas fa-globe"></i> <strong>Francese (FR):</strong> Livello Intermedio</li>
-        <li><i class="fas fa-globe"></i> <strong>Tedesco (DE):</strong> Livello Base</li>
-        <li><i class="fas fa-globe"></i> <strong>Russo (RU):</strong> Livello Base</li>
+        <li>🌐 <strong>Italiano:</strong> Madrelingua</li>
+        <li>🌐 <strong>Inglese:</strong> Livello Avanzato</li>
+        <li>🌐 <strong>Francese:</strong> Livello Intermedio</li>
+        <li>🌐 <strong>Tedesco:</strong> Livello Base</li>
+        <li>🌐 <strong>Russo:</strong> Livello Base</li>
     </ul>
 </section>
 
