--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Maria Grazia Toppi | Cybersecurity Student</title>
 
-<link rel="stylesheet" href="/Maryevans96/style.css"> 
+<link rel="stylesheet" href="/Maryevans96/style.css"> 
 <script src="https://kit.fontawesome.com/a2e0e6e6a2.js" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icon-css@3.5.0/css/flag-icon.min.css">
+
 </head>
 
 <body>
@@ -41,14 +44,13 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
 <section class="competenze-linguistiche">
     <h3>🗣️ Competenze Linguistiche</h3>
     <ul>
-        <li>🌐 <strong>Italiano:</strong> Madrelingua</li>
-        <li>🌐 <strong>Inglese:</strong> Livello Avanzato</li>
-        <li>🌐 <strong>Francese:</strong> Livello Intermedio</li>
-        <li>🌐 <strong>Tedesco:</strong> Livello Base</li>
-        <li>🌐 <strong>Russo:</strong> Livello Base</li>
+        <li><span class="flag-icon flag-icon-it"></span> <strong>Italiano:</strong> Madrelingua</li>
+        <li><span class="flag-icon flag-icon-gb"></span> <strong>Inglese:</strong> Livello Avanzato</li>
+        <li><span class="flag-icon flag-icon-fr"></span> <strong>Francese:</strong> Livello Intermedio</li>
+        <li><span class="flag-icon flag-icon-de"></span> <strong>Tedesco:</strong> Livello Base</li>
+        <li><span class="flag-icon flag-icon-ru"></span> <strong>Russo:</strong> Livello Base</li>
     </ul>
 </section>
-
     <section class="competenze-tecniche">
         <h3>⚙️ Competenze Tecniche e Strumenti</h3>
         <ul>
