--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
       <i class="fab fa-github"></i> GitHub
     </a>
 
+    <a href="https://tryhackme.com/p/mariagraziatoppi"
+    target="_blank" rel="noopener noreferrer" class="social-btn tryhackme">
+      <i class="fas fa-lock"></i> TryHackMe
+    </a>
+      
     <a href="https://www.instagram.com/mary_evans_96/"
     target="_blank" rel="noopener noreferrer" class="social-btn instagram">
       <i class="fab fa-instagram"></i> Instagram
