--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
     <h3>🗣️ Competenze Linguistiche</h3>
     <ul>
         <li><span class="flag-icon flag-icon-it"></span> <strong>Italiano:</strong> Madrelingua</li>
-        <li><span class="flag-icon flag-icon-gb"></span> <strong>Inglese:</strong> Livello Avanzato</li>
-        <li><span class="flag-icon flag-icon-fr"></span> <strong>Francese:</strong> Livello Intermedio</li>
-        <li><span class="flag-icon flag-icon-de"></span> <strong>Tedesco:</strong> Livello Base</li>
-        <li><span class="flag-icon flag-icon-ru"></span> <strong>Russo:</strong> Livello Base</li>
+        <li><span class="flag-icon flag-icon-gb"></span> <strong>Inglese:</strong> C1</li>
+        <li><span class="flag-icon flag-icon-fr"></span> <strong>Francese:</strong> B2</li>
+        <li><span class="flag-icon flag-icon-de"></span> <strong>Tedesco:</strong> A1</li>
+        <li><span class="flag-icon flag-icon-ru"></span> <strong>Russo:</strong> A1</li>
     </ul>
 </section>
     <section class="competenze-tecniche">
@@ -64,7 +64,7 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
         <h3>💻 Linguaggi di Programmazione e Sviluppo Web</h3>
         <ul>
             <li>🛠️ <strong>Linguaggi:</strong> C, Java, Python, SQL</li>
-            <li>🌐 <strong>Sviluppo Web:</strong> HTML, CSS</li>
+            <li>🌐 <strong>Sviluppo Web:</strong> HTML</li>
         </ul>
     </section>
 
