--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Amante del <strong>true crime</strong>, ho deciso di improntare la mia vita lavo
         <h3>⚙️ Competenze Tecniche e Strumenti</h3>
         <ul>
             <li>🖥️ <strong>Sistemi Operativi:</strong> Windows, Ubuntu/Linux</li>
-            <li>🔒 <strong>Strumenti IT/Sicurezza:</strong> GitHub, Wireshark, Office Suite (Word, Excel, PowerPoint, Access)</li>
+            <li>🔒 <strong>Strumenti IT/Sicurezza:</strong> GitHub, Office Suite (Word, Excel, PowerPoint, Access)</li>
             <li>🎨 <strong>Strumenti Grafici:</strong> GIMP, Canva</li>
         </ul>
     </section>
